--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
                 <classifier>osx-x86_64</classifier>
             </dependency>
             <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-tcnative-boringssl-static</artifactId>
+                <version>2.0.7.Final</version>
+                <classifier>${os.detected.classifier}</classifier>
+            </dependency>
+            <dependency>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-stdlib-jdk8</artifactId>
                 <version>${kotlin.version}</version>
@@ -108,5 +114,13 @@
         </dependencies>
     </dependencyManagement>
 
-
+    <build>
+        <extensions>
+            <extension>
+                <groupId>kr.motd.maven</groupId>
+                <artifactId>os-maven-plugin</artifactId>
+                <version>1.4.0.Final</version>
+            </extension>
+        </extensions>
+    </build>
 </project>
